<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_connection_title"
        android:key="pref_key_connection">
        <CheckBoxPreference
            android:key="pref_keepConnection"
            android:title="@string/pref_keepConnection"
            android:summary="@string/pref_keepConnection_summ"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_experimental_title"
        android:key="pref_key_experimental">
        <CheckBoxPreference
            android:key="pref_netadmin"
            android:title="@string/pref_netadmin"
            android:summary="@string/pref_netadmin_summ"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
