<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/started"
        android:icon="@drawable/ic_play_circle_outline_white_24dp"
        android:title="@string/task_started"
        app:showAsAction="always"/>
    <item
        android:id="@+id/done"
        android:icon="@drawable/ic_checkbox_marked_circle_outline_white_24dp"
        android:title="@string/task_done"
        app:showAsAction="always"/>
    <item
        android:id="@+id/failed"
        android:icon="@drawable/ic_information_outline_white_24dp"
        android:title="@string/task_failed"
        app:showAsAction="always"/>

    <!-- Power actions -->
    <item
        android:id="@+id/assign"
        android:icon="@drawable/ic_account_plus_white_24dp"
        android:title="@string/task_assign"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/task_delete"
        app:showAsAction="always"/>
</menu>
